--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "packages/*"
   ],
   "devDependencies": {
+    "lerna": "^2.9.1",
     "semantic-release": "^15.1.5",
     "semantic-release-monorepo": "^6.0.1"
   },
